.provarCaches/00Df2000001KKNJEA4/objects/INRF__Rule_Notification__c.object
<CustomObject>
    <fields>
        <fullName>INRF__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>INRF__Record_ID__c</fullName>
        <label>Record ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INRF__Record_Name__c</fullName>
        <label>Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INRF__Record__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  INRF__Record_ID__c ,  INRF__Record_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record</label>
        <type>Text</type>
    </fields>
    <label>Rule Notification</label>
    <listViews>
        <fullName>INRF__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RN-{0000}</displayFormat>
        <label>Rule Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>